# TinyShare

./: .gitignore  example.config.ini  pyproject.toml  readme.md
src/: app.py
src/website/: __init__.py
src/website/controller/: __init__.py  login.py  panel.py  shared.py  websocket_demo.py
src/website/models/: __init__.py  shared_id.py
src/website/vue/: index.html
src/website/vue/interface/: login.html
src/website/vue/static/css/: base.css  index.css  login.css
src/website/vue/static/html/: base.html
src/website/vue/static/html/error/: 400.html  403.html  404.html  405.html  500.html
